cargo-features = ["profile-overrides"]  # Enable the use of `[profile.dev.overrides]`

[workspace]
members = [
    "stella2",
    "stella2_assets",
    "tcw3",
    "tcw3/testing",
    "tcw3/pal",
    "tcw3/images",
    "harmony",
    "stvg/io",
    "stvg/macro",
    "stvg/tcw3",
    "support/alt_fp",
    "support/as_any",
    "support/atom2",
    "support/cggeom",
    "support/eager_peekable",
    "support/iterpool",
    "support/rope",
    "support/subscriber_list",
    "support/sorted_diff",
    "res/mkmacosbundle",
    "res/windres",
]

[profile.release]
debug = true
panic = "abort"
lto = true

[profile.bench]
lto = true
debug = true

[profile.dev.overrides]
# A software-based compositor (`swrast`) is used when other backends are not
# available for some reason. This is horrendously slow on debug builds and hurts
# developer experience. To mitigate this issue, always enable optimization for
# `tcw3_pal`. This isn't as fast as the release build due to lack of LTO, but
# at least it's usable.
tcw3_pal = { opt-level = 3 }
