[package]
name = "stella2"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
tcw3 = { path = "../tcw3" }
harmony = { path = "../harmony" }
stella2_assets = { path = "../stella2_assets" }
cggeom = { path = "../support/cggeom" }
cgmath = "0.17.0"
cfg-if = "0.1.7"
stvg_tcw3 = { path = "../stvg/tcw3" }
enclose = "1.1.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.3"
cocoa = "0.18.4"
