[package]
name = "stella2"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "GPL-3.0-or-later"

# Specify to run this program by default when you do `cargo run` without
# specifying a binary name.
default-run = "stella2"

[dependencies]
chrono = "0.4"
tcw3 = { path = "../tcw3" }
harmony = { path = "../harmony" }
stella2_assets = { path = "../stella2_assets" }
stella2_meta = { path = "meta" }
cggeom = { path = "../support/cggeom" }
cgmath = "0.17.0"
cfg-if = "0.1.7"
stvg_tcw3 = { path = "../stvg/tcw3" }
subscriber_list = { path = "../support/subscriber_list" }
enclose = "1.1.6"
env_logger = "0.7.0"
iota = "0.2.1"

[target.'cfg(target_os = "windows")'.dependencies]
stella2_windres = { path = "../res/windres" }
winapi = { version = "0.3.8", features = ["winuser", "libloaderapi"] }
windebug_logger = "0.1.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.3"
cocoa = "0.20.0"

[dependencies.log]
version = "0.4"
# Disable logging in release builds
features = ["release_max_level_off"]
