[package]
name = "stella2"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "GPL-3.0-or-later"

# Specify to run this program by default when you do `cargo run` without
# specifying a binary name.
default-run = "stella2"

[dependencies]
arrayvec = "0.5"
cfg-if = "0.1.7"
cggeom = { path = "../support/cggeom" }
cgmath = "0.17.0"
chrono = "0.4"
dirs = "2.0.2"
displaydoc = "0.1.5"
enclose = "1.1.6"
env_logger = "0.7.0"
fslock = "0.1.4"
harmony = { path = "../harmony", features = ["miniserde"] }
iota = "0.2.1"
miniserde = "0.1.12"
nativedispatch = { path = "../support/nativedispatch" }
stella2_assets = { path = "../stella2_assets" }
stella2_meta = { path = "meta" }
stvg_tcw3 = { path = "../stvg/tcw3" }
subscriber_list = { path = "../support/subscriber_list" }
tcw3 = { path = "../tcw3" }

[target.'cfg(target_os = "windows")'.dependencies]
stella2_windres = { path = "../res/windres" }
winapi = { version = "0.3.8", features = ["winuser", "libloaderapi"] }
windebug_logger = "0.1.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.20.0"
objc = "0.2.3"

[dependencies.log]
version = "0.4"
# Disable logging in release builds
features = ["release_max_level_off"]
