[package]
name = "tcw3"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT"

[features]
testing = ["tcw3_pal/testing", "tcw3_testing/testing"]

[dependencies]
arrayvec = "0.5"
cgmath = "0.17.0"
bitflags = "1.1.0"
cggeom = { path = "../support/cggeom" }
flags-macro = "0.1.3"
iterpool = { path = "../support/iterpool" }
derive_more = "0.15.0"
subscriber_list = { path = "../support/subscriber_list" }
as_any = { path = "../support/as_any" }
alt_fp = { path = "../support/alt_fp" }
rope = { path = "../support/rope" }
svgbobdoc = "0.2"
sorted_diff = { path = "../support/sorted_diff" }
lazy_static = "1"
itertools = "0.8.0"
ndarray = "0.13.0"

tcw3_images = { path = "images" }
tcw3_pal = { path = "pal" }
tcw3_testing = { path = "testing" }

[dependencies.momo]
git = "https://github.com/llogiq/momo.git"
rev = "3d9d9709a5675bf3f5ebddcb3c1ec8ccf91e9b40"

[dev-dependencies]
lipsum = "0.6.0"
structopt = "0.3.0"
enclose = "1.1.8"
env_logger = "0.7.0"
log = "0.4"
try_match = { version = "0.2.1", default-features = false, features = ["std"] }
