[package]
name = "tcw3"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT"

[features]
testing = ["tcw3_pal/testing", "tcw3_testing/testing"]

[dependencies]
alt_fp = { path = "../support/alt_fp" }
arrayvec = "0.5"
as_any = { path = "../support/as_any" }
bitflags = "1.1.0"
cggeom = { path = "../support/cggeom" }
cgmath = "0.17.0"
derive_more = "0.99.1"
flags-macro = "0.1.3"
iterpool = { path = "../support/iterpool" }
itertools = "0.8.0"
lazy_static = "1"
log = "0.4"
minisort = { path = "../support/minisort" }
ndarray = "0.13.0"
neo_linked_list = { path = "../support/neo_linked_list" }
owning_ref = "0.4.0"
rc-borrow = "1.0.0"
rope = { path = "../support/rope" }
sorted_diff = { path = "../support/sorted_diff" }
subscriber_list = { path = "../support/subscriber_list" }
svgbobdoc = "0.2"

tcw3_designer_runtime = { path = "designer_runtime" }
tcw3_images = { path = "images" }
tcw3_meta = { path = "meta" }
tcw3_pal = { path = "pal" }
tcw3_testing = { path = "testing" }

[dependencies.momo]
git = "https://github.com/llogiq/momo.git"
rev = "3d9d9709a5675bf3f5ebddcb3c1ec8ccf91e9b40"

[dev-dependencies]
enclose = "1.1.8"
env_logger = "0.7.0"
lipsum = "0.6.0"
quickcheck = "0.9"
quickcheck_macros = "0.9"
structopt = "0.3.0"
try_match = { version = "0.2.1", default-features = false, features = ["std"] }
