[package]
name = "tcw3"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT"

[features]
testing = ["tcw3_pal/testing", "tcw3_testing/testing"]

[dependencies]
alt_fp = { path = "../support/alt_fp", features = ["packed_simd"] }
array = "0.0.1"
array_intrusive_list = { path = "../support/array_intrusive_list" }
arrayvec = "0.5"
as_any = { path = "../support/as_any" }
bitflags = "1.1.0"
boxed_slice_tools = { path = "../support/boxed_slice_tools" }
cggeom = { path = "../support/cggeom" }
cgmath = "0.17.0"
derive_more = "0.99.1"
flags-macro = "0.1.3"
iota = "0.2.1"
iterpool = { path = "../support/iterpool" }
itertools = "0.9.0"
lazy_static = "1"
leakypool = { path = "../support/leakypool" }
log = "0.4"
minisort = { path = "../support/minisort" }
ndarray = "0.13.0"
neo_linked_list = { path = "../support/neo_linked_list" }
owning_ref = "0.4.0"
packed_simd = "0.3.0"
rc-borrow = "1.0.0"
rob = "0.1"
rope = { path = "../support/rope" }
sorted_diff = { path = "../support/sorted_diff" }
stvg_macro = { path = "../stvg/macro" }
subscriber_list = { path = "../support/subscriber_list" }
svgbobdoc = "0.2"
try_match = "0.2.1"
unicount = { path = "../support/unicount" }

tcw3_designer_runtime = { path = "designer_runtime" }
tcw3_images = { path = "images" }
tcw3_meta = { path = "meta" }
tcw3_pal = { path = "pal" }
tcw3_stvg = { path = "stvg" }
tcw3_testing = { path = "testing" }

[dependencies.momo]
git = "https://github.com/yvt/momo.git"
rev = "26101cc1dacfd4afe9906af464fcbecaca6a18e2"

[dev-dependencies]
enclose = "1.1.8"
env_logger = "0.7.0"
lipsum = "0.6.0"
quickcheck = "0.9"
quickcheck_macros = "0.9"
structopt = "0.3.0"
