[package]
name = "stellavg_macro"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

[dependencies]
stellavg_io = { path = "../io" }
usvg = "0.6.1"
syn = "0.15"
quote = "0.6.12"
rgb = "0.8.13"
cgmath = "0.17.0"

[dependencies.pathfinder_geometry]
git = "https://github.com/servo/pathfinder.git"
rev = "678b6f12c7bc4b8076ed5c66bf77a60f7a56a9f6"

[lib]
path = "src/lib.rs"
proc-macro = true
