[package]
name = "stvg_tcw3"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT"

[features]
testing = ["tcw3/testing"]

[dependencies]
tcw3 = { path = "../../tcw3" }
stvg_io = { path = "../io" }
cgmath = "0.17.0"
cggeom = { path = "../../support/cggeom" }

[dev-dependencies]
stvg_macro = { path = "../macro" }
