[package]
name = "alt_fp"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/yvt/alt_fp-rs"
description = """
Provides alternative (faster in most cases) implementation for
floating-point operations.
"""
keywords = ["floating-point", "performance", "simd"]

[features]
default = ["packed_simd"]

[dependencies]
packed_simd = { version = "0.3.4", package = "packed_simd_2", optional = true }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "castf32"
harness = false