[package]
name = "nativedispatch"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
dispatch = "0.2.0"

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
glib-sys = "0.9.1"
lazy_static = "1"
