[package]
name = "nativedispatch"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native"]
native = []

[dependencies]
async-std = { version = "1.4.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
dispatch = "0.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["winbase", "threadpoolapiset"] }
lazy_static = "1"

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
glib-sys = "0.9.1"
lazy_static = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
