[package]
name = "tcw3_designer"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
bincode = "1.2.0"
codemap = "0.1.0"
codemap-diagnostic = "0.1.1"
serde = { version = "1.0", features = ["derive"] }

[dependencies.syn]
version = "1.0.8"
default-features = false
features = ["derive", "full", "parsing", "visit-mut"]

[dependencies.proc-macro2]
version = "1.0.4"
default-features = false
features = ["span-locations"]
