[package]
name = "tcw3_images"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT"

[dependencies]
alt_fp = { path = "../../support/alt_fp" }
array_intrusive_list = { path = "../../support/array_intrusive_list" }
array = "0.0.1"
cggeom = { path = "../../support/cggeom" }
cgmath = "0.17.0"
leakypool = { path = "../../support/leakypool" }
packed_simd = "0.3.0"
quick-error = "1.2.3"

tcw3_pal = { path = "../pal" }
