[package]
name = "tcw3_pal"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT"

[features]
default = []

# This flag enables the use of `winit` in the macOS backend for creating
# windows and handling input events. Whether this should be default or not is
# yet to be determined. After it's decided, this feature flag probably should be
# remove.
macos_winit = ["winit"]

# Enables the testing backend. Note that the testing backend needs to be
# activated at runtime before use.
testing = ["atom2", "cairo-rs", "pangocairo", "pango", "rayon"]

[dependencies]
alt_fp = { path = "../../support/alt_fp" }
array = "0.0.1"
arrayvec = "0.5"
atom2 = { path = "../../support/atom2", optional = true }
bitflags = "1.1.0"
cfg-if = "0.1.7"
cggeom = { path = "../../support/cggeom", features = ["quickcheck"] }
cgmath = "0.17.0"
checked = "0.5.0"
derive_more = "0.99.1"
flags-macro = "0.1.3"
fragile = "0.3.0"
futures = "0.3"
iterpool = { path = "../../support/iterpool" }
itertools = "0.8.0"
lazy_static = "1"
log = "0.4"
neo_linked_list = { path = "../../support/neo_linked_list" }
once_cell = "1.2.0"
owning_ref = "0.4.0"
packed_simd = "0.3.0"
rgb = "0.8.13"
svgbobdoc = "0.2"
winit = { version = "0.20.0-alpha3", optional = true }
zerocopy = "0.2.8"

# testing backend (borrows some implementation from `unix`)
cairo-rs = { version = "0.7.1", optional = true }
pangocairo = { version = "0.8.0", optional = true }
pango = { version = "0.7.0", optional = true }
rayon = { version = "1.2.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.20.0"
core-foundation = "0.7"
core-graphics = "0.19.0"
core-text = "15.0.0"
dispatch = "0.1.4"
objc = "0.2.3"

# `unix` backend
[target.'cfg(not(target_os = "macos"))'.dependencies]
winit = "0.20.0-alpha3"
swsurface = "0.1.2"
cairo-rs = "0.7.1"
pangocairo = "0.8.0"
pango = "0.7.0"
rayon = "1.2.0"

[build-dependencies]
cc = "1.0.35"

[dev-dependencies]
demotools = { path = "../../support/demotools" }
env_logger = "0.7.0"
quickcheck = "0.9"
quickcheck_macros = "0.8"
structopt = "0.3.0"
arg_enum_proc_macro = "0.3.0"

[[test]]
name = "futures"
path = "tests/futures.rs"
harness = false

[[test]]
name = "timer"
path = "tests/timer.rs"
harness = false

[[test]]
name = "terminate_with_pending_invoke"
path = "tests/terminate_with_pending_invoke.rs"
harness = false
