[package]
name = "tcw3_pal"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT"

[features]
default = []

# Enables the testing backend. Note that the testing backend needs to be
# activated at runtime before use.
testing = ["cairo-rs", "pangocairo", "pango", "rayon"]

[dependencies]
alt_fp = { path = "../../support/alt_fp" }
arr_macro = "0.1.3"
array = "0.0.1"
array_intrusive_list = { path = "../../support/array_intrusive_list" }
arrayvec = "0.5"
atom2 = { path = "../../support/atom2" }
bitflags = "1.1.0"
cggeom = { path = "../../support/cggeom", features = ["quickcheck"] }
cgmath = "0.17.0"
checked = "0.5.0"
derive_more = "0.99.1"
flags-macro = "0.1.3"
fragile = "1.0.0"
futures = "0.3"
iterpool = { path = "../../support/iterpool" }
itertools = "0.8.0"
lazy_static = "1"
leakypool = { path = "../../support/leakypool" }
log = "0.4"
neo_linked_list = { path = "../../support/neo_linked_list" }
once_cell = "1.2.0"
owning_ref = "0.4.0"
packed_simd = "0.3.0"
rgb = "0.8.13"
svgbobdoc = "0.2"
try_match = "0.2.1"
utf16count = { path = "../../support/utf16count" }
zerocopy = "0.2.8"

# testing backend (borrows some implementation from `unix`)
cairo-rs = { version = "0.8.0", optional = true }
pangocairo = { version = "0.9.0", optional = true }
pango = { version = "0.8.0", optional = true }
rayon = { version = "1.2.0", optional = true }

# `macos` backend
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.20.0"
core-foundation = "0.7"
core-graphics = "0.19.0"
core-text = "15.0.0"
dispatch = "0.2.0"
objc = "0.2.3"

# `windows` backend
[target.'cfg(target_os = "windows")'.dependencies]
atom2 = { path = "../../support/atom2", features = ["winrt"] }
directwrite = "0.1.4"
direct2d = "0.2.0"
dxgi = "0.1.7"
wchar = "0.6.0"

[target.'cfg(target_os = "windows")'.dependencies.winrt]
version = "0.6.0"
features = [
	"windows-ui", "windows-system", "windows-ui-xaml", "windows-graphics",
]

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.8"
features = [
	"d2d1_1", "dwrite", "winbase", "winuser", "shellscalingapi", "combaseapi",
	"synchapi", "dxgi1_3", "dcomp", "d3d11", "dwmapi", "libloaderapi",
	"processthreadsapi", "gdiplusflat", "gdiplusinit", "stringapiset",
	"d3d11_2", "threadpoolapiset", "objbase",
]

# `gtk` backend
[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
gio = "0.8.1"
gdk = "0.12.0"
gdk-sys = "0.9.1"
glib = "0.9.0"
glib-sys = "0.9.1"
gtk = "0.8.0"
gtk-sys = "0.9.1"
gobject-sys = "0.9.1"
# `cairo_surface_set_device_scale` requires v1.14
cairo-rs = { version = "0.8.0", features = ["v1_14"] }
cairo-sys-rs = "0.9.2"
pangocairo = "0.9.0"
pango = "0.8.0"
rayon = "1.2.0"

[build-dependencies]
cc = "1.0.35"
pkg-config = "0.3.7"

[dev-dependencies]
demotools = { path = "../../support/demotools" }
env_logger = "0.7.0"
quickcheck = "0.9"
quickcheck_macros = "0.9"
structopt = "0.3.0"
unicode-segmentation = "1.6.0"
arg_enum_proc_macro = "0.3.0"

[[test]]
name = "futures"
path = "tests/futures.rs"
harness = false

[[test]]
name = "timer"
path = "tests/timer.rs"
harness = false

[[test]]
name = "terminate_with_pending_invoke"
path = "tests/terminate_with_pending_invoke.rs"
harness = false
