[package]
name = "tcw3_testing"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

[features]
testing = ["tcw3_pal/testing", "env_logger"]

[dependencies]
env_logger = { version = "0.7.0", optional = true }
log = "0.4"

tcw3_pal = { path = "../pal" }
tcw3_testing_macros = { path = "./macros" }
